# ga4-dbt-template

./: .gitignore  README.md  dbt_project.yml  dbt_project_example.yml  packages.yml  profiles.yml  pyproject.toml
.dbt/: .user.yml  profiles.yml
models/: exposures.yml  schema.yml  schema_source.yml
models/ga/: daily_unique_user.sql  ga_events.sql
models/mart/: dim_pages.sql  fct_dim_events_with_pages.sql  fct_events.sql  schema_mart.yml
models/reporting/: access_count_by_device.sql  rpt_device_access_pv.sql  rpt_device_access_session.sql  rpt_device_access_uu.sql  rpt_device_summary.sql  rpt_device_summary_with_uu.sql  schema_reporting.yml
models/staging/analytics_272722196/: schema_staging.yml  stg_access_count_by_date.sql  stg_events.sql  stg_events_and_names.sql  stg_page_display_names.sql
