[tool.poetry]
name = "dbt-practice"
version = "0.1.0"
description = ""
authors = ["Junya MORITA <mjunya1030@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.15"
dbt-core = "^1.3.1"
dbt-bigquery = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
